ajout pattern repository

--- a/public/Asset/css/contact.css
+++ b/public/Asset/css/contact.css
@@ -52,7 +52,7 @@ form.formulaire {
 }
 
 body {
-  background-image: url(/Asset/Images/girafe_paysage.webp);
+  background-image: url(https://res.cloudinary.com/dr7jxgr70/image/upload/v1736034895/girafe_paysage_rkfpcb.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
