--- a/public/Asset/css/dashindex.css
+++ b/public/Asset/css/dashindex.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background: url(/Asset/Images/jaguar.webp);
+  background: url(https://res.cloudinary.com/dr7jxgr70/image/upload/v1736034899/jaguar_eesrlk.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
