--- a/public/Asset/css/nosservices.css
+++ b/public/Asset/css/nosservices.css
@@ -1,6 +1,6 @@
 .vide {
     height: 100vh;
-    background: url(/Asset/Images/autruchepaysage.webp);
+    background: url(https://res.cloudinary.com/dr7jxgr70/image/upload/v1736034892/autruchepaysage_foougq.webp);
     background-repeat: no-repeat;
     background-size: cover;
 }
