--- a/public/Asset/css/nosunivers.css
+++ b/public/Asset/css/nosunivers.css
@@ -1,6 +1,6 @@
 
 body {
-  background: url(/Asset/Images/foret.webp);
+  background: url(https://res.cloudinary.com/dr7jxgr70/image/upload/v1736034895/foret_gtfdkp.webp);
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
