--- a/public/Asset/css/pageConnexion.css
+++ b/public/Asset/css/pageConnexion.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: url(/Asset/Images/jaguar.webp) no-repeat;
+  background: url(https://res.cloudinary.com/dr7jxgr70/image/upload/v1736034899/jaguar_eesrlk.webp) no-repeat;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
