--- a/public/Asset/css/404.css
+++ b/public/Asset/css/404.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background: url(/Asset/Images/jaguar.webp);
+    background: url(https://res.cloudinary.com/dr7jxgr70/image/upload/v1736034899/jaguar_eesrlk.webp);
     background-repeat: no-repeat;
     background-size: cover;
 }
